<?xml version="1.0" encoding="utf-8"?>
<layout>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ProgressBar
            android:id="@+id/progress_bar_home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.core.widget.NestedScrollView
            android:id="@+id/nsv_home"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fillViewport="true"
            android:paddingHorizontal="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/tv_home_header"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:text="@string/home_header"
                    android:textColor="@color/black"
                    android:textSize="30sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/card_view_search"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:cardBackgroundColor="@android:color/white"
                    app:cardCornerRadius="6dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_home_header">

                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center">

                        <androidx.appcompat.widget.SearchView
                            android:id="@+id/search_view_home"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginTop="20dp"
                            android:paddingHorizontal="8dp"
                            app:iconifiedByDefault="false"
                            app:queryHint="@string/home_search_hint" />

                    </FrameLayout>

                </com.google.android.material.card.MaterialCardView>

                <ImageView
                    android:id="@+id/image_view_repair"
                    android:layout_width="wrap_content"
                    android:layout_height="250dp"
                    android:scaleType="fitXY"
                    android:src="@drawable/header"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_home_header" />

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/card_view_wedding"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:layout_marginHorizontal="10dp"
                    android:layout_marginTop="30dp"
                    app:cardCornerRadius="8dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/image_view_repair">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:adjustViewBounds="true"
                        android:scaleType="fitXY"
                        android:src="@drawable/wedding" />

                </com.google.android.material.card.MaterialCardView>

                <TextView
                    android:id="@+id/text_view_all_services"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:text="@string/home_all_services_title"
                    android:textColor="@color/black"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/card_view_wedding" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recycler_view_all_services"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:nestedScrollingEnabled="false"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/text_view_all_services" />

                <TextView
                    android:id="@+id/tv_popular_services_header"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:text="@string/home_popular_services_header"
                    android:textColor="@color/black"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/recycler_view_all_services" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recycler_view_popular_services"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_popular_services_header" />

                <TextView
                    android:id="@+id/text_view_home_posts_header"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginTop="30dp"
                    android:text="@string/home_posts_header"
                    android:textColor="@android:color/primary_text_light_nodisable"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/recycler_view_popular_services" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recycler_view_home_posts"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/text_view_home_posts_header" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.core.widget.NestedScrollView>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
